tests/invalid/import_inside_nested_function/main.py
def main() -> None:
    def inner() -> int:
        import imports.module_a
        return 1

    x: int = inner()
    print(x)
